src/components/scss/custom.scss
// colors and theming
$theme-colors: (
  "primary": #333333,
  "secondary": #91A3B0,
  "muted": #E9EDF0
);


@import "../bootstrap/scss/bootstrap";
@import url("https://use.typekit.net/rqe4rki.css");

// colors
$heb-brand-color: #333333;
$heb-accent-color: #91A3B0;
$heb-accent-color-dark: #65778B;
$heb-red: #9E172E;

// typography
@mixin proxima-nova {
  font-family: proxima-nova, Arial, Helvetica, sans-serif;
}

.proxima-nova {
  @include proxima-nova;
}

@mixin freight-text {
  font-family: freight-text-pro, Georgia, 'Times New Roman', Times, serif;
}

.freight-text {
  @include freight-text;
}

body {
  @include freight-text;
}

h1,
h2,
h3,
h4,
h5 {
    @include proxima-nova;
    font-weight: 700;
    color:$heb-brand-color;
}

h1 {
  font-size: 1.95rem;
  text-transform: uppercase;
}

h2 {
  margin-top: 2rem;
  font-size: 1.6rem;
}

h3 {
  font-size: 1.3rem;
}

h3, 
h4,
h5 {
  margin-top: 1rem;
}

*:focus {
	/* inner indicator */
	outline: 2px #F9F9F9 solid !important;
	outline-offset: 0;
	/* outer indicator */
	box-shadow: 0 0 0 4px #193146 !important;
}

.text-light {
  color: #fff !important;
}

// links
p, ul li, ol li {
  a {
  text-decoration: underline;
  }
}

// buttons
.btn {
  @include proxima-nova;
  font-weight: 600;
}

// header and navigation
.nav,
header {
  @include proxima-nova;
}

header {
  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
  input.search-query {
    background-color: #F3F3F3;
    border-right: none;
  }
  button.search-submit {
    border-top: rgb(206, 212, 218) 1px solid;
    border-right: rgb(206, 212, 218) 1px solid;
    border-bottom: rgb(206, 212, 218) 1px solid;
    border-left: none;
    height: 100%;
    padding: 0;
  }
  
  .nav-browse {
    display: flex;
    justify-content: flex-end;
    font-size: 14px;

    
    a {
      text-transform: uppercase;
      font-weight: 600;
      color: #707070;
    }
    a:hover,
    a:active {
      text-decoration: underline;
    }
  }
}

.nav-scroller {
  position: relative;
  z-index: 2;
  overflow-y: hidden;
  border-bottom: 2px solid $heb-red;
  
  .nav {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    overflow-x: auto;
    text-align: center;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
  
    a {
      text-transform: uppercase;
      font-weight: 600;
    }
    a:hover,
    a:active {
      text-decoration: underline;
    }

  }
}

.navbar-brand-logo {
  padding-right: 1rem;
}

.navbar-brand h1 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 1.2px;
  display: inline-block;
  margin: 0;
  margin-bottom: -8px;
  vertical-align: bottom;
  font-size: 26px;
}

// cards

.cards-container {
  padding-bottom: 3rem;

  .card-list {
    justify-content: space-evenly;
  }
  
  .card {
    border-radius: 0;
    padding-right: 0;
    padding-left: 0;

    picture,
    source {
      line-height: 0;
    };
    .card-body {
      justify-content: space-around;
      margin: 0 !important;
      flex-wrap: nowrap;
    }

    h3 {
      font-size: 1.25rem;
      margin-top: 0;
    }

    .card-img {
      border-radius: 0;
      max-height: 300px;
    }

    .card-text {
      font-size: .9rem;
    }

    .cover-only-img {
      min-width: 200px;
    }
  }
}

// home - tagline and cta button
.tagline-container {
  background-color: $heb-brand-color;
  padding: 4rem 0;
  border-top: 1px solid rgba(0,0,0,.125);

  .row {
    justify-content: space-between;
  }

  .tagline {
    font-weight: bold;
    font-size: 1.6rem;
  }
}

// call to action buttons
.cta-container {
  padding-top: 1.5rem;
  border-top: 1px solid rgba(0,0,0,.125);
  background-color: #ffffff;

  .cta-1-container, .cta-2-container, .cta-3-container {
    margin-top: 15px;
  }
}

// impact

.map-container {
  background: url(/assets/impact-usage.png) no-repeat;
  background-size: cover;
  height: 100%;
  overflow: auto;
  padding-top: 1.5rem;
  padding-bottom: 4rem;

  .stats {
    display: flex;
    justify-content: space-evenly;
    @include proxima-nova;
    font-weight: 600;
    font-size: 25px;
    margin-top: 6.5rem;
    margin-bottom: 6.5rem;

    svg {
      display: block;
      margin: 0 auto;
      width: 80%;
    }
  }

  a {
    font-size: 25px;
  }
}

p.social {
  padding-top: .4em;
  a {
    padding-right: 0.75em;
    svg {
      display: inline-block;
      vertical-align: middle;
      fill: $heb-red;
    }
  }
}

// sub-pages
.page-container {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

// footer
.footer {
  background-color: $heb-accent-color-dark;
  border-top: 2px solid $heb-red;
  padding: 3rem 0 1rem;

  ul li a,
  ol li a {
    text-decoration: none;
  }

  .partners {
    display: flex;
    flex-direction: column;
    img {
      height: 60px;
    }
    a {display: inline-block;}
    a > img {
      display: inline-block;
    }
    p {
      font-size: 12px;
    }
  }

  h2 {
    font-size: 17px;
    @include proxima-nova;
    text-transform: uppercase;
    margin-top: 0;
  }

  .fulcrum {
    vertical-align: baseline;
  }

  .block {
    display: block;
  }

  p.social {
    padding-top: .4em;
    a {
      padding-right: 0.75em;
      svg {
        display: inline-block;
        vertical-align: middle;
        fill: $heb-red;
      }
    }
  }

}

